fix view on mobile

--- a/project/src/style.scss
+++ b/project/src/style.scss
@@ -36,6 +36,10 @@ textarea {
         @content
     }
 }
+body, html{
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
+}
 .formContainer{
     background-color: #23272A;
     height: 100vh;
@@ -171,8 +175,8 @@ textarea {
     // border: 1px solid white;
     // border-radius: 10px;
     width: 100%;
-    height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100%;
+    
     display: flex;
     position: relative;
     @include mobile{
